# buoyant

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: book.yml  rust.yml
benches/: view.rs
buoyant-examples/battery/: Cargo.toml
buoyant-examples/battery/src/: app.rs  charge_simulator.rs  color.rs  font.rs  lib.rs  state.rs  view.rs
buoyant-examples/battery/src/view/: charge.rs  screen_setting.rs  stats.rs
buoyant-harness/: Cargo.toml  README.md
buoyant-harness/examples/book_images/: main.rs
buoyant-harness/examples/book_images/views/: alignment.rs  collections.rs  conditional_views.rs  fonts.rs  mixed_alignment.rs  mod.rs  quickstart.rs  separating_views.rs  spacing.rs  stacks.rs
buoyant-harness/examples/runner/: main.rs
buoyant-harness/examples/runner/views/: chart.rs  chart_demos.rs  counter.rs  demo.rs  mod.rs
buoyant-harness/examples/runner/workflows/: chart.rs  chart_demos.rs  counter.rs  demo.rs  mod.rs  toggle.rs
buoyant-harness/src/: config.rs  lib.rs  runner.rs  test_harness.rs
docs/book/: book.toml
docs/book/drawio/: Compound Render Tree.drawio  Render Tree.drawio  Transition.drawio
docs/book/src/: SUMMARY.md  animation.md  building-views.md  custom-views.md  event-loops.md  interactivity.md  introduction.md  quickstart.md  quickstart.rs
examples/: crossterm.rs  espresso.rs  profiler.rs  quickstart.rs
examples/advanced_input/: definitions.rs  hardware_input_input_line.rs  main.rs  mock_data.rs  settings.rs  table.rs  table_view.rs
examples/advanced_input/table/: ie_editor.rs  movement_proxy.rs
examples/espresso/: main.rs
examples/espresso/view/: clean.rs  settings.rs
scripts/: generate-book-images.sh  test-book.sh
src/: animation.rs  app.rs  color.rs  environment.rs  event.rs  focus.rs  font.rs  image.rs  keyboard.rs  layout.rs  lib.rs  main.rs  pixel.rs  primitives.rs  render.rs  render_loop.rs  render_target.rs  style.rs  surface.rs  transition.rs  versioned.rs  view.rs
src/app/: harness.rs  tracked.rs  trees.rs
src/event/: cursor.rs  input.rs  keyboard.rs
src/event/keyboard/: input.rs
src/focus/: role.rs
src/font/: character_buffer_font.rs  embedded_mono_font.rs  rusttype.rs  u8g2.rs
src/primitives/: dimension.rs  frame.rs  geometry.rs  interpolate.rs  plottable.rs  point.rs  seal.rs  size.rs  transform.rs  unit_point.rs
src/primitives/geometry/: circle.rs  line.rs  no_shape.rs  rectangle.rs  rounded_rectangle.rs
src/render/: animate.rs  capsule.rs  circle.rs  clipped.rs  collections.rs  conditional_tree.rs  container.rs  content_shape_override.rs  empty.rs  hint_background.rs  image.rs  offset.rs  one_of.rs  opacity.rs  option.rs  owned_text.rs  primitives.rs  rect.rs  rounded_rect.rs  scroll_metadata.rs  scroll_renderable.rs  shade.rs  shade_subtree.rs  shape.rs  static_text.rs  table_renderable.rs  text.rs  text_box.rs  transform.rs  transition_option.rs
src/render/chart/: bar.rs  line.rs  mod.rs  point.rs
src/render/primitives/: capsule.rs  circle.rs  conditional_tree.rs  owned_text.rs  rect.rs  rounded_rect.rs  shade_subtree.rs  static_text.rs
src/render/shape/: capsule.rs  circle.rs  rect.rs  rounded_rect.rs
src/render_target/: crossterm.rs  crossterm_render_target.rs  crossterm_target.rs  embedded_display_render_target.rs  embedded_graphics.rs  embedded_graphics_target.rs  fixed_text_buffer.rs  geometry.rs  surface.rs
src/render_target/surface/: clipped_surface.rs  draw_target_surface.rs  offset_surface.rs
src/style/: color_style.rs  horizontal_gradient.rs
src/view/: as_drawable.rs  button.rs  capturing.rs  conditional_view.rs  divider.rs  empty_view.rs  foreach.rs  foreground_style.rs  geometry_reader.rs  hstack.rs  image.rs  match_view.rs  modifier.rs  option.rs  padding.rs  paginate.rs  pagination.rs  rectangle.rs  rotary.rs  scroll_view.rs  shape.rs  spacer.rs  table.rs  text.rs  view_ext.rs  view_that_fits.rs  vstack.rs  zstack.rs
src/view/chart/: content.rs  mark.rs  mod.rs  scale.rs  series.rs
src/view/modifier/: animated.rs  aspect_ratio.rs  background.rs  background_color.rs  bound_focus.rs  clipped.rs  content_shape.rs  custom_layout.rs  erase_captures.rs  exclusive_focus.rs  fixed_frame.rs  fixed_size.rs  flex_frame.rs  focus_touches.rs  foreground_color.rs  foreground_style.rs  geometry_group.rs  hidden.rs  hint_background.rs  map_event.rs  multiplex_focus.rs  offset.rs  on_cancel.rs  opacity.rs  overlay.rs  padding.rs  popover.rs  priority.rs  scale_effect.rs  transition.rs  unfocusable.rs
src/view/shape/: capsule.rs  circle.rs  rectangle.rs  rounded_rectangle.rs  style.rs
src/view/text/: break_word_wrap.rs  character.rs  character_wrap.rs  unicode.rs  whitespace_wrap.rs  word_wrap.rs  wrap.rs
tests/: animation.rs  aspect_ratio.rs  background.rs  button.rs  chart.rs  common.rs  conditional_view.rs  divider.rs  embedded_graphics_render_target.rs  fixed_frame.rs  flex_frame.rs  foreach.rs  geometry_group.rs  geometry_reader.rs  hidden.rs  hstack.rs  map_event.rs  match_view.rs  mod.rs  offset.rs  opacity.rs  overlay.rs  padding.rs  priority.rs  render_inset_shapes.rs  spacer.rs  text.rs  view_that_fits.rs  vstack.rs  zstack.rs
tests/common/: helpers.rs  mod.rs
tests/embedded_graphics_target/: clipped.rs  images.rs  misc.rs  mod.rs  shapes.rs  shapes_transform.rs  text.rs
tests/embedded_graphics_target/assets/: rhombic-dodecahedron.tga
tests/embedded_graphics_target/clipping/: image.rs  mod.rs  text.rs
tests/embedded_graphics_target/text/: precise_bounds.rs  precise_bounds_break_wrap.rs  precise_bounds_character_wrap.rs  precise_bounds_word_wrap.rs
tests/focus/: harness.rs  mod.rs  stacked_buttons.rs
tests/focus/modifier/: background.rs  bound_focus.rs  clip.rs  content_shape.rs  focus_touches.rs  frame.rs  hidden.rs  multiplex_focus.rs  opacity.rs  overlay.rs  popover.rs  (+1 more)
tests/scroll_view/: animated_drop.rs  bounds.rs  constrained_movement.rs  embedded_button.rs  helpers.rs  mod.rs  nesting.rs  pinning.rs  snapping.rs
tests/transition/: if_single_arm.rs  mod.rs  modifiers.rs
(+49 files in other folders)
