[package]
name = "buoyant"
version = "0.3.0"
authors = ["Riley Williams"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "SwiftUI-like UIs in Rust for embedded devices"
readme = "README.md"
repository = "https://github.com/riley-williams/buoyant"
keywords = ["ui", "graphics"]
exclude = [".github"]

[badges]
maintenance = { status = "experimental" }

[features]
default = ["embedded-graphics"]
std = []
embedded-graphics = ["dep:embedded-graphics", "dep:embedded-graphics-core"]
crossterm = ["dep:crossterm", "std"]

[dependencies]
crossterm = { version = "^0.28", optional = true }
embedded-graphics-core = { version = "^0.4", optional = true }
embedded-graphics = { version = "^0.8", optional = true }
heapless = "^0.8"
paste = "1.0.15"

[dev-dependencies]
embedded-graphics-simulator = "0.7.0"
sdl2 = "0.37.0"

[profile.release]
debug = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "warn"

# TODO: Disabled for now.
cast_possible_wrap = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
