[package]
name = "buoyant"
version = "0.5.0-alpha.2"
authors = ["Riley Williams"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "SwiftUI-like UIs in Rust for embedded devices"
readme = "README.md"
repository = "https://github.com/riley-williams/buoyant"
keywords = ["ui", "gui", "graphics", "no-std", "embedded"]
categories = ["gui", "graphics", "no-std", "embedded"]
exclude = [".github", ".markdownlint.yml"]

[badges]
maintenance = { status = "experimental" }

[features]
default = ["embedded-graphics"]
std = []
embedded-graphics = ["dep:embedded-graphics", "dep:embedded-graphics-core"]
crossterm = ["dep:crossterm", "std"]

[dependencies]
crossterm = { version = "^0.28", optional = true }
embedded-graphics-core = { version = "^0.4", optional = true }
embedded-graphics = { version = "^0.8", optional = true }
heapless = "^0.8"
paste = "1.0.15"

[dev-dependencies]
embedded-graphics-simulator = { version = "0.7.0", default-features = false, features = [
  "with-sdl",
] }

[profile.release]
debug = true

[lints]
workspace = true

[[example]]
name = "crossterm"
required-features = ["crossterm"]

[workspace]
members = ["buoyant-examples/battery"]

[workspace.dependencies]
embedded-graphics = "0.8.1"
embedded-graphics-simulator = { version = "0.7.0", default-features = false, features = [
  "with-sdl",
] }
heapless = "0.8.0"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "deny"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }

absolute_paths = "allow"
missing_const_for_fn = "allow"
useless_let_if_seq = "warn"
missing_panics_doc = "warn"
too_long_first_doc_paragraph = "warn"
needless_pass_by_ref_mut = "deny"
use_self = "deny"
derive_partial_eq_without_eq = "deny"
type_repetition_in_bounds = "deny"
option_if_let_else = "deny"

# Disabled for now, may be worth turning on in the future
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
field_scoped_visibility_modifiers = "allow"
shadow_unrelated = "allow"
ref_patterns = "allow"
cast_sign_loss = "allow"
string_slice = "allow"
renamed_function_params = "allow"
float_arithmetic = "allow"
indexing_slicing = "allow"
as_conversions = "allow"

[package.metadata.typos]
default.extend-ignore-re = [
  # Ignore line following `// @typos-ignore` line
  "(?m)^\\s*// @typos-ignore$\n.*",
]
