[package]
edition = "2021"
name = "battery"
version = "0.1.0"
description = "A one-button battery charger interface"

[dependencies]
buoyant = { path = "../.." }
embedded-graphics = { workspace = true }
embedded-graphics-simulator = { workspace = true }
heapless = { workspace = true }
u8g2-fonts = { version = "0.6.0" }

# Change the library color format by building with
# `--features rgb565 --no-default-features`
[features]
default = ["rgb888"]
rgb888 = []
rgb565 = []

[lints]
workspace = true
